--- a/package.json
+++ b/package.json
@@ -1,13 +1,10 @@
 {
-  "name": "firstgithubpackage",
+  "name": "@jonny15t/firstgithubpackage",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "publishConfig": {
-    "registry": "https://npm.pkg.github.com"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "registry": "https://npm.pkg.github.com/@jonny15t"
   },
   "keywords": [],
   "author": "",
